tests/toylang/neg/000330_mutation.toylang
program a = { a = (a) int; } .
